<resources>
    <string name="app_name">Every Day A Painting</string>
    <string name="imageViewPhoto">Imagen del cuadro</string>
    <string name="textViewName">Name</string>
    <string name="textViewYear">Year</string>
    <string name="textViewAuthor">Author</string>
    <string name="textViewTechnique">Technique</string>
    <string name="textViewStyle">Style</string>
    <string name="textViewLocation">Location</string>
    <string name="btnRandom">Cuadro Aleatorio</string>
    <string name="btnTodos">Ver Galería</string>
    <string name="editTextSiglo">Siglo</string>
    <string name="editTextAutor">Autor</string>
    <string name="imgPortadaDescription">Imagen de portada de la aplicación</string>
    <string name="btnBuscar">Botón búqueda</string>
    <string name="btnAleatorioContentDescription">Cuadro Aleatorio</string>
    <string name="btnAyuda">Boton de ayuda</string>
    <string name="btnVolumen">Boton de volumen</string>
    <string name="txtAyuda">Bienvenido a nuestra Galería de Arte!\n\n
                            Puedes mirar los cuadros o dejar que la app seleccione uno aleatorio para tí\n\n
                            Si pinchas en el autor de un cuadro o en su estilo, puedes leer más sobre ellos\n
                            También puedes buscar cuadros en nuestra base de datos,\n
                            puedes buscar por Autor, Siglo o Estilo, pero por separado\n\n
                            Esperamos que disfrutes!</string>
</resources>